--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -9,7 +9,12 @@
           <div class="card">
             <div class="d-flex justify-content-between p-2 px-3">
               <div class="d-flex flex-row align-items-center"> 
-                <img src="https://bootdey.com/img/Content/avatar/avatar7.png" width="50" class="rounded-circle">
+                <% if (post.user && post.user.image) { %>
+                  <img src='<%= post.user.image %>' width="50" class="rounded-circle" alt="">
+                <% } else { %>
+                  <!-- Provide a default image or handle the case where image is not available -->
+                  <img src='https://bootdey.com/img/Content/avatar/avatar7.png' width="50" class="rounded-circle" alt="">
+                <% } %>
                 <div class="d-flex flex-column ml-2"> 
                   <span class="font-weight-bold"> <%= post.user.name %></span> 
                   <small class="text-primary">Student</small> 
