--- a/views/partials/home_nav.ejs
+++ b/views/partials/home_nav.ejs
@@ -16,7 +16,7 @@
         </li> 
 
         <li class="nav-item">
-          <a class="nav-link" href="/chat">Create-Chat-Room</a>
+          <a class="nav-link" href="/chat">Chat-Room</a>
         </li> 
         <li class="nav-item">
           <a class="nav-link" href="/About">About</a>
