--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,76 +1,130 @@
 <%- include('./partials/home_nav.ejs')%>
 
-<% if(paginatedPosts.length > 0) { %>
-  <!-- Display paginated posts -->
-  <% paginatedPosts.forEach(post => { %>
-    <div class="container mt-5 mb-5" style="max-width: 1200px;">
-      <div class="row d-flex align-items-center justify-content-center">
-        <div class="col-md-6">
-          <div class="card">
-            <div class="d-flex justify-content-between p-2 px-3">
-              <div class="d-flex flex-row align-items-center"> 
-                <% if (post.user && post.user.image) { %>
-                  <img src='<%= post.user.image %>' width="50"  height="50" class="rounded-circle" alt="">
-                <% } else { %>
-                  <!-- Provide a default image or handle the case where image is not available -->
-                  <img src='https://bootdey.com/img/Content/avatar/avatar7.png'  width="50"  height="50"  class="rounded-circle" alt="">
-                <% } %>
-                <div class="d-flex flex-column ml-2"> 
-                  <span class="font-weight-bold">
-                    <% if (post.user && post.user.name) { %>
-                      <%= post.user.name %>
+<div class="container mt-5 mb-5" style="max-width: 1200px;">
+  <div class="row">
+
+    <!-- Paginated Posts Column -->
+    <div class="col-md-8">
+      <!-- Display paginated posts -->
+      <% if(paginatedPosts.length > 0) { %>
+        <% paginatedPosts.forEach(post => { %>
+          <div class="container mt-5 mb-5">
+            <div class="row">
+              <div class="col-md-10">
+                <div class="card">
+                  <div class="d-flex justify-content-between p-2 px-3">
+                    <div class="d-flex flex-row align-items-center"> 
+                      <% if (post.user && post.user.image) { %>
+                        <img src='<%= post.user.image %>' width="50" height="50" class="rounded-circle" alt="">
+                      <% } else { %>
+                        <img src='https://bootdey.com/img/Content/avatar/avatar7.png' width="50" height="50" class="rounded-circle" alt="">
+                      <% } %>
+                      <div class="d-flex flex-column ml-2"> 
+                        <span class="font-weight-bold">
+                          <% if (post.user && post.user.name) { %>
+                            <%= post.user.name %>
+                          <% } else { %>
+                            Unknown User
+                          <% } %>
+                        </span> 
+                        <small class="text-primary">Student</small> 
+                      </div>
+                    </div>
+                    <div class="d-flex flex-row mt-1 ellipsis"> 
+                      <small class="mr-2">
+                        <span class="post-time" data-timestamp="<%= post.date %>">
+                          <%= post.date.toDateString() %>
+                        </span>
+                      </small>
+                    </div>
+                  </div>
+                  <div class="p-2">
+                    <% if (post.desc && post.desc.length && post.desc.length <= 200) { %>
+                      <p class="text-justify"><%= post.desc %></p>
+                      <button class="see-more-button"><a href="/eachPost/<%= post._id %>">See Details</a></button>
+                    <% } else if (post.desc && post.desc.length) { %>
+                      <p class="text-justify" data-desc="<%= post.desc %>"><%= post.desc.slice(0, 200) %></p>
+                      <button class="see-more-button"><a href="/eachPost/<%= post._id %>">See Details</a></button>
                     <% } else { %>
-                      Unknown User
+                      <p class="text-justify">No description available</p>
+                      <!-- You might want to add a default behavior here -->
                     <% } %>
-                  </span> 
-                  <small class="text-primary">Student</small> 
+                    <hr>
+                  </div>
                 </div>
               </div>
-              <div class="d-flex flex-row mt-1 ellipsis"> 
-                <small class="mr-2">
-                  <span class="post-time" data-timestamp="<%= post.date %>">
-                    <%= post.date.toDateString() %>
-                  </span>
-                </small>
-              </div>
             </div>
-            <div class="p-2">
-              <% if (post.desc.length <= 150) { %>
-                <p class="text-justify"><%= post.desc %></p>
-                <button class="see-more-button"><a href="/eachPost/<%= post._id %>">See Details</a></button>
-              <% } else { %>
-                <p class="text-justify" data-desc="<%= post.desc %>"><%= post.desc.slice(0, 150) %></p>
-                <button class="see-more-button"><a href="/eachPost/<%= post._id %>">See Details</a></button>
-              <% } %>
-              <hr>
-            </div>
+          </div>
+        <% }); %>
+
+        <!-- Pagination Links -->
+        <div class="pagination mt-3 d-flex justify-content-center">
+          <% if (currentPage > 1) { %>
+            <a href="?page=<%= currentPage - 1 %>" class="page-link">Previous</a>
+          <% } %>
+
+          <% for (let i = 1; i <= totalPages; i++) { %>
+            <a href="?page=<%= i %>" class="page-link <%= i === currentPage ? 'active' : '' %>"><%= i %></a>
+          <% } %>
+
+          <% if (currentPage < totalPages) { %>
+            <a href="?page=<%= currentPage + 1 %>" class="page-link">Next</a>
+          <% } %>
+        </div>
+      <% } else { %>
+        <p class="post-content">There is nothing to show</p>
+      <% } %>
+    </div>
+
+    <!-- Sidebar Widgets Column -->
+    <div class="col-md-4 order-1 order-md-2">
+      <!-- Search Widget -->
+      <div class="card my-4">
+        <h5 class="card-header">Search</h5>
+        <div class="card-body">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search for...">
+            <span class="input-group-btn">
+              <button class="btn btn-secondary" type="button">Go!</button>
+            </span>
           </div>
         </div>
       </div>
+
+     <!-- Categories Widget -->
+<div class="card my-4">
+  <h5 class="card-header">Categories</h5>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-lg-6">
+        <ul class="list-unstyled mb-0">
+          {{#each categories}}
+            <li>
+              <a href="#" class="category-link" data-category="{{title}}">{{title}}</a>
+            </li>
+          {{/each}}
+        </ul>
+      </div>
     </div>
-  <% }); %>
-
-  <!-- Pagination Links -->
-  <div class="pagination mt-3 d-flex justify-content-center">
-    <% if (currentPage > 1) { %>
-      <a href="?page=<%= currentPage - 1 %>" class="page-link">Previous</a>
-    <% } %>
-
-    <% for (let i = 1; i <= totalPages; i++) { %>
-      <a href="?page=<%= i %>" class="page-link <%= i === currentPage ? 'active' : '' %>"><%= i %></a>
-    <% } %>
-
-    <% if (currentPage < totalPages) { %>
-      <a href="?page=<%= currentPage + 1 %>" class="page-link">Next</a>
-    <% } %>
   </div>
+</div>
 
-<% } else { %>
-  <p class="post-content">There is nothing to show</p>
-<% } %>
+
+
+</div>
+
+</div>
+<!-- /.row -->
+
+</div>
 
 <%- include('./partials/footer.ejs')%>
 
+
+<!-- Include jQuery library -->
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+<!-- Your custom script -->
 <script>
   // Your existing JavaScript code for updating posting times
   // ...
@@ -87,13 +141,28 @@
           paragraphElement.setAttribute('data-state', 'expanded');
           button.textContent = 'Show Less';
         } else {
-          paragraphElement.textContent = fullDescription.slice(0, 150);
+          paragraphElement.textContent = fullDescription.slice(0, 200);
           paragraphElement.setAttribute('data-state', 'collapsed');
           button.textContent = '...See More';
         }
       } else {
         console.error('Paragraph element not found');
       }
+    });
+  });
+</script>
+<script>
+  $(document).ready(function() {
+    // Event handler for category links
+    $('.category-link').on('click', function(e) {
+      e.preventDefault();
+
+      // Get the category from the data attribute
+      var category = $(this).data('category');
+
+      // You can now use the 'category' variable to perform actions, such as filtering posts by category
+      console.log('Selected Category:', category);
+      // Perform additional logic, e.g., fetching posts for the selected category via AJAX
     });
   });
 </script>
