Designation field added

--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -190,6 +190,21 @@ body {
                         <input type="text" id="name" class="form-control" placeholder="enter full name" name="name" aria-describedby="passwordHelpInline" value="<%=user.name%>">
                       </div>
 
+                      <div class="form-group input-container">
+                        <label for="designation" >Designation :</label>
+                        <select type="text" id="designation" class="form-control col-md-8" name="designation" aria-describedby="passwordHelpInline">
+                            <option value="Student" selected="">Student</option>
+                            <option value="Doctor" selected="">Doctor</option>
+                            <option value="Engineer" selected="">Engineer</option>
+                           <option value="Blogger" selected="">Blogger</option>
+                           <option value="Teacher" selected="">Teacher</option>
+                           <option value="Banker" selected="">Banker</option>
+                           <option value="Police" selected="">Police</option>
+                           <option value="Worker" selected="">Worker</option>
+                           <option value="Social Worker" selected="">Social Worker</option>
+                        </select>
+                    </div>
+
                     <div class="form-group input-container">
                         <label for="email">Email :</label>
                         <input type="text" id="email" class="form-control" placeholder="enter email address" name="email" aria-describedby="passwordHelpInline" value="<%=user.email%>">
@@ -204,15 +219,15 @@ body {
                     <div class="form-group input-container">
                         <label for="language" >Language :</label>
                         <select type="text" id="language" class="form-control col-md-8" name="language" aria-describedby="passwordHelpInline">
-                            <option value="Bangla" selected="">Arabic</option>
+                            <option value="Arabic" selected="">Arabic</option>
                             <option value="Bangla" selected="">Bangla</option>
-                            <option value="Bangla" selected="">Danish</option>
+                            <option value="Danish" selected="">Danish</option>
                            <option value="English" selected="">English</option>
-                           <option value="Bangla" selected="">French</option>
-                           <option value="Bangla" selected="">Hebrew</option>
-                           <option value="Bangla" selected="">Hindi</option>
-                           <option value="Bangla" selected="">Spanish</option>
-                           <option value="Bangla" selected="">Urdu</option>
+                           <option value="French" selected="">French</option>
+                           <option value="Hebrew" selected="">Hebrew</option>
+                           <option value="Hindi" selected="">Hindi</option>
+                           <option value="Spanish" selected="">Spanish</option>
+                           <option value="Urdu" selected="">Urdu</option>
                         </select>
                     </div>
 
