--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -126,6 +126,15 @@ body {
 
                     <div class="row mt-2 ">
                         <div class="col-md-2 ml-3">
+                            <label for="inputDesignation" class="col-form-label"><b>Designation :</b></label>
+                          </div>
+                          <div class="col-md-3">
+                            <label for="inputDesignation" class="col-form-label"><%= user.designation %></label>
+                          </div>
+                    </div><hr class="my-2 hrWidth">
+
+                    <div class="row mt-2 ">
+                        <div class="col-md-2 ml-3">
                             <label for="inputEmail" class="col-form-label"><b>Email:</b></label>
                           </div>
                           <div class="col-md-3">
