--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -27,7 +27,7 @@
                             Unknown User
                           <% } %>
                         </span> 
-                        <small class="text-primary">Student</small> 
+                        <small class="text-primary"><%= user.designation %></small> 
                       </div>
                     </div>
                     <div class="d-flex flex-row mt-1 ellipsis"> 
