Fixing th size of title

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -48,7 +48,8 @@
               </div>
 
               <div class="p-2">
-                <h3><%= post.title %></h3>
+                <h5>Title: <%= post.title %></h5>
+                <br />
                 <% if (post.desc) { %>
                 <div class="text-justify">
                   <!-- Render Quill content as HTML -->
