--- a/views/about.ejs
+++ b/views/about.ejs
@@ -65,6 +65,8 @@
       <li>Collaborative Learning</li>
       <li>Summarization Feature</li>
       <li>Decision-Making Support</li>
+      <li>Create Chat--Room</li>
+      <li>Categorization Based on Academic, Non-Academic and Other </li>
   </ul>
 
   <h5>Benefits:</h5>
