--- a/views/eachPost.ejs
+++ b/views/eachPost.ejs
@@ -59,13 +59,13 @@
       <!-- Post content-->
       <article>
         <!-- Post header-->
-        <header class="mb-4">
+        <header class="mb-2">
           <!-- Post title-->
           <h1 class="fw-bolder mb-1"><%- post.title %></h1>
         </header>
         <!-- Post content-->
-        <section class="mb-5">
-          <p class="fs-5 mb-4 border border-secondary-subtle post_desc"><%- post.desc %></p>
+        <section >
+          <p class="fs-5 mb-3  post_desc"><%- post.desc %></p>
         </section>
       </article>
     </div>
