--- a/views/post.ejs
+++ b/views/post.ejs
@@ -38,7 +38,7 @@
       </div>
       <input type="hidden" id="desc" name="desc" />
     </div>
-    <button type="submit" class="btn btn-primary">Publish</button>
+    <button type="submit" class="btn btn-success">Publish</button>
   </form>
 </div>
 
