--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -48,7 +48,7 @@
               </div>
 
               <div class="p-2">
-                <h5>Title: <%= post.title %></h5>
+                <h5><%= post.title %></h5>
                 <br />
                 <% if (post.desc) { %>
                 <div class="text-justify">
